[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/nightmare.jpg" type="Texture" id=1]
[ext_resource path="res://Resources/Nightmare Pumpkins.otf" type="DynamicFontData" id=2]
[ext_resource path="res://TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://Resources/prstartk.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="ShaderMaterial" id=2]

[sub_resource type="DynamicFont" id=3]
size = 12
outline_color = Color( 0.917647, 0.027451, 0.027451, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
outline_color = Color( 0, 0, 0, 1 )

[node name="Node" type="Node"]
script = ExtResource( 3 )

[node name="nightmare" type="Sprite" parent="."]
position = Vector2( 512.55, 300.348 )
scale = Vector2( 0.682467, 0.666079 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 313.69
margin_top = 61.2967
margin_right = 731.69
margin_bottom = 291.297
custom_fonts/font = SubResource( 1 )
text = "Alternite
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New Game" type="Button" parent="."]
modulate = Color( 0.882353, 0.0588235, 0.0588235, 1 )
material = SubResource( 2 )
margin_left = 412.893
margin_top = 178.243
margin_right = 616.893
margin_bottom = 229.243
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="."]
modulate = Color( 0.882353, 0.0588235, 0.0588235, 1 )
material = SubResource( 2 )
margin_left = 413.0
margin_top = 250.0
margin_right = 617.0
margin_bottom = 301.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Button" parent="."]
modulate = Color( 0.882353, 0.0588235, 0.0588235, 1 )
material = SubResource( 2 )
margin_left = 413.0
margin_top = 321.838
margin_right = 617.0
margin_bottom = 372.838
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Secret_button" type="Button" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 1009.42
margin_top = 2.57289
margin_right = 1021.42
margin_bottom = 11.5729
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="New Game" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="Secret_button" to="." method="_on_Secret_button_pressed"]
